--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^1.19.2",
     "ts-node": "^8.3.0",
@@ -33,6 +34,7 @@
     "typescript": "^3.6.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.4"
   }
